Changed travel destination

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="florida">
-                <h2>Florida</h2>
+            <div class="destination" id="INDIA">
+                <h2>INDIA</h2>
             </div>
 
-            <div class="destination" id="paris">
-                <h2>Paris</h2>
+            <div class="destination" id="CANADA">
+                <h2>CANADA</h2>
             </div>
         </div>
     </div>
